--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,17 @@ dependencies:
   esc_pos_utils_plus: ^2.0.1+6
   flutter_esc_pos_network: ^1.0.3
   image: ^4.0.17
+  connectivity_plus: ^6.1.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   flutter_lints: ^6.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
 
 flutter_icons:
   android: true
