--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  internet_connection_checker_plus: ^2.0.0
 
 dev_dependencies:
   flutter_test:
